--- a/index.html
+++ b/index.html
@@ -9,81 +9,69 @@
    </head>
    <body>
       <center>
-         <div class="container">
-            <div style="
-            background: white;
-            padding: 20px;
-            margin: 50px;
-            box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
-            border-radius: 3px;
-            width: 550px;
-            margin: 0px auto";>
-            <h1>Hello, i'm Amélie</h1>
-            <img src="images/amelie_ocana.png" id= "amelie_ocana" height= "235" width="235" style="float:left;"/>
-            <h3 style="float:right;">I love graphic design, food and makeup. 
-               <br>I work at Sézane and go to school at l'IESEG
-            </h3>
-           <a href=https://www.lewagon.com/fr target="_blank"> Discover The Wagon
-            </a>
-         </div>
-         <div class="card-white">
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <h2> Graphic Design <i class="fas fa-pencil-alt"></i></h2>
-            <p>
-               I like to use Photoshop to create fun web templates !
-            </p>
-            <h2> Food <i class="fas fa-utensils"></i></h2>
-            <p>
-               I am a foodie and like to try new recipes every week !
-            </p>
-            <h2> Makeup <i class="far fa-eye"></i></i></h2>
-            <p>
-               I love to create new looks and make people feel beautiful !
-            </p>
-         </div>
-         <div class="card-white">
-         <h2> Discover my life in pictures <i class="fas fa-camera-retro"></i></h2>
-         </div>
-         <div class="album-thumbnails">
-            <a href="https://www.instagram.com/amelieocn/" target="_blank">
-            <img src="images/my_friends.jpg">
-            </a>
-            <a href="https://www.instagram.com/amelieocn/" target="_blank">
-            <img src="images/my_dog.jpg">
-            </a>
-            <a href="https://www.instagram.com/amelieocn/" target="_blank">
-            <img src="images/san_francisco.jpg">
-            </a>
-            <a href="https://www.instagram.com/amelieocn/" target="_blank">
-            <img src="images/miami.jpg">
-            </a>
-            <br class=”blank” />
-            <a href="https://www.instagram.com/amelieocn/" target="_blank">
-            <img src="images/chipotle.jpg">
-            </a>
-            <a href="https://www.instagram.com/amelieocn/" target="_blank">
-            <img src="images/sunset_pink.jpg">
-            </a>
-            <a href="https://www.instagram.com/amelieocn/" target="_blank">
-            <img src="images/london.jpg">
-            </a>
-            <a href="https://www.instagram.com/amelieocn/" target="_blank">
-            <img src="images/chapman.jpg">
-            </a>
-         </div>
          <div>
-            <h2>Follow me</h2>
-            <a href="https://www.facebook.com/amelieocana" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.instagram.com/amelieocn" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/amelieocana/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <br>
-            <br>
-            <br>
+            <div class="card-white">
+               <h1>Hello, i'm Amélie</h1>
+               <img src="images/amelie_ocana.png" id= "amelie_ocana">
+               <h3>I love graphic design, food and makeup. 
+                  <br>I work at Sézane and go to school at l'IESEG
+               </h3>
+               <a href=https://www.lewagon.com/fr target="_blank"> Discover The Wagon
+               </a>
+            </div>
+            <div class="card-white">
+               <h2> Graphic Design <i class="fas fa-pencil-alt"></i></h2>
+               <p>
+                  I like to use Photoshop to create fun web templates !
+               </p>
+               <h2> Food <i class="fas fa-utensils"></i></h2>
+               <p>
+                  I am a foodie and like to try new recipes every week !
+               </p>
+               <h2> Makeup <i class="far fa-eye"></i></i></h2>
+               <p>
+                  I love to create new looks and make people feel beautiful !
+               </p>
+            </div>
+            <div class="card-white">
+               <h2> Discover my life in pictures <i class="fas fa-camera-retro"></i></h2>
+               <div class="album-thumbnails">
+                  <a href="https://www.instagram.com/amelieocn/" target="_blank">
+                  <img src="images/my_friends.jpg">
+                  </a>
+                  <a href="https://www.instagram.com/amelieocn/" target="_blank">
+                  <img src="images/my_dog.jpg">
+                  </a>
+                  <a href="https://www.instagram.com/amelieocn/" target="_blank">
+                  <img src="images/san_francisco.jpg">
+                  </a>
+                  <a href="https://www.instagram.com/amelieocn/" target="_blank">
+                  <img src="images/miami.jpg">
+                  </a>
+                  <br class=”blank” />
+                  <a href="https://www.instagram.com/amelieocn/" target="_blank">
+                  <img src="images/chipotle.jpg">
+                  </a>
+                  <a href="https://www.instagram.com/amelieocn/" target="_blank">
+                  <img src="images/sunset_pink.jpg">
+                  </a>
+                  <a href="https://www.instagram.com/amelieocn/" target="_blank">
+                  <img src="images/london.jpg">
+                  </a>
+                  <a href="https://www.instagram.com/amelieocn/" target="_blank">
+                  <img src="images/chapman.jpg">
+                  </a>
+               </div>
+            </div>
+            <div class="card-white">
+               <h2>Follow me</h2>
+               <a href="https://www.facebook.com/amelieocana" target="_blank"><i class="fab fa-facebook"></i></a>
+               <a href="https://www.instagram.com/amelieocn" target="_blank"><i class="fab fa-instagram"></i></a>
+               <a href="https://www.linkedin.com/in/amelieocana/" target="_blank"><i class="fab fa-linkedin"></i></a>
+               <br>
+               <br>
+               <br>
+            </div>
          </div>
       </center>
    </body>
